[project]
name = "multi-agent-researcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.9.0",
    "duckduckgo-search>=8.1.1",
    "langchain>=1.0.5",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.0.0",
    "langgraph>=1.0.3",
    "langgraph-supervisor>=0.0.30",
    "python-dotenv>=1.2.1",
    "streamlit>=1.51.0",
]
